--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ FCFLAGS += -I/usr/include -I/usr/lib64/gfortran/modules
 LDFLAGS = -llog4fortran -lsim_base -lsim_vol7d -lsim_volgrid6d
 
 # List of executables to be built within the package
-PROGRAMS = prodsim_vg6d_tcorr prodsim_create_projgrib
+PROGRAMS = prodsim_vg6d_tcorr prodsim_create_projgrib prodsim_v7d_fast_read
 
 # "make" builds all
 all: $(PROGRAMS)
