--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,8 @@ LDFLAGS = -llog4fortran -lsim_base -lsim_vol7d -lsim_volgrid6d -lgrib_api -lsim_
 
 # List of executables to be built within the package
 PROGRAMS = prodsim_thunderstorm_index prodsim_vg6d_tcorr prodsim_create_projgrib \
- prodsim_v7d_fast_read prodsim_scangrib prodsim_expand_field prodsim_cnmc_lightning
+ prodsim_v7d_fast_read prodsim_scangrib prodsim_expand_field prodsim_cnmc_lightning \
+ cosmo_to_premoloch
 
 # "make" builds all
 all: $(PROGRAMS)
@@ -19,12 +20,17 @@ all: $(PROGRAMS)
 # dependencies through modules
 prodsim_cnmc_lightning.o: cnmc_lightning_mo.o
 prodsim_cnmc_lightning: cnmc_lightning_mo.o
+cosmo_to_premoloch.o: cosmo_to_premoloch_mo.o
+cosmo_to_premoloch: cosmo_to_premoloch_mo.o
 
 # General rule for building prog from prog.o; $^ (GNU extension) is
 # used in order to list additional object files on which the
 # executable depends
 %: %.o
 	$(FC) $(FCFLAGS) -o $@ $^ $(LDFLAGS)
+
+cosmo_to_premoloch: cosmo_to_premoloch.o
+	$(FC) $(FCFLAGS) -o $@ $^ -lgrib_api -lgrib_api_f90
 
 # General rules for building prog.o from prog.f90 or prog.F90; $< is
 # used in order to list only the first prerequisite (the source file)
