--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ LDFLAGS = -llog4fortran -lsim_base -lsim_vol7d -lsim_volgrid6d -lgrib_api -lsim_
 # List of executables to be built within the package
 PROGRAMS = prodsim_thunderstorm_index prodsim_vg6d_tcorr prodsim_create_projgrib \
  prodsim_v7d_fast_read prodsim_scangrib prodsim_expand_field prodsim_cnmc_lightning \
- cosmo_to_premoloch
+ prodsim_compute_anomaly cosmo_to_premoloch
 
 # "make" builds all
 all: $(PROGRAMS)
