add utility for computing Probability Of Hail

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ LDFLAGS = -llog4fortran -lsim_base -lsim_vol7d -lsim_volgrid6d -lgrib_api -lsim_
 # List of executables to be built within the package
 PROGRAMS = prodsim_thunderstorm_index prodsim_vg6d_tcorr prodsim_create_projgrib \
  prodsim_v7d_fast_read prodsim_scangrib prodsim_expand_field prodsim_cnmc_lightning \
- prodsim_compute_anomaly cosmo_to_premoloch
+ prodsim_compute_anomaly prodsim_compute_poh cosmo_to_premoloch
 
 # "make" builds all
 all: $(PROGRAMS)
@@ -22,12 +22,17 @@ prodsim_cnmc_lightning.o: cnmc_lightning_mo.o
 prodsim_cnmc_lightning: cnmc_lightning_mo.o
 cosmo_to_premoloch.o: cosmo_to_premoloch_mo.o
 cosmo_to_premoloch: cosmo_to_premoloch_mo.o
+prodsim_compute_poh.o: simc_radar_mo.o
+prodsim_compute_poh: simc_radar_mo.o
 
 # General rule for building prog from prog.o; $^ (GNU extension) is
 # used in order to list additional object files on which the
 # executable depends
 %: %.o
 	$(FC) $(FCFLAGS) -o $@ $^ $(LDFLAGS)
+
+prodsim_compute_poh: prodsim_compute_poh.o
+	$(FC) $(FCFLAGS) -o $@ $^ $(LDFLAGS) -lnetcdff -lnetcdf
 
 cosmo_to_premoloch: cosmo_to_premoloch.o
 	$(FC) $(FCFLAGS) -o $@ $^ -lgrib_api -lgrib_api_f90
