--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ FCFLAGS = -g -fbounds-check -Wall
 FCFLAGS += -I/usr/include -I/usr/lib64/gfortran/modules
 
 # libraries needed for linking, unused in the examples
-LDFLAGS = -llog4fortran -lsim_base -lsim_vol7d -lsim_volgrid6d -lgrib_api -lsim_termolib
+LDFLAGS = -llog4fortran -lsim_base -lsim_vol7d -lsim_volgrid6d -lgrib_api -lsim_termolib -llog4c
 
 # List of executables to be built within the package
 PROGRAMS = prodsim_thunderstorm_index prodsim_vg6d_tcorr prodsim_create_projgrib \
